[project]
name = "com_digitalruiz_shopify_apis"
version = "0.0.3"
authors = [
  { name="Reyes Ruiz", email="reyes@digitalruiz.com" },
]
description = "A custom http client for shopify"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'com-digitalruiz-my-logger',
  'com-digitalruiz-shopify-http-client',
]

[project.urls]
"Homepage" = "https://github.com/reyesruiz/shopify_apis"
"Bug Tracker" = "https://github.com/reyesruiz/shopify_apis/issues"
